# jetpack-examples

./: .gitignore  Procfile  README.md
01-py-flask-hello/: .env  Dockerfile  README.md  requirements.txt
02-py-async-jobs/: FormerlyCalledDockerfile  Procfile  coin_toss.py  jetpack_main.py  project.toml  requirements.txt
02-py-flask-hello-buildpack/: Procfile  README.md  requirements.txt
02-py-flask-secrets/: .env  README.md  secrets.json
03-py-async-jobs/: Dockerfile  README.md  requirements.txt
03-py-async-jobs-buildpack/: Procfile  fibonacci.py  jetpack_main.py
03-py-custom-dockerfile/: Dockerfile
03-py-s3-access/: requirements.txt
04-py-permanent-job/: Dockerfile  requirements-torch.txt  requirements.txt
04-py-scheduled-jobs/: README.md  requirements.txt
05-py-cron-job/: Dockerfile  README.md  requirements.txt
05-py-permanent-job-buildpack/: Procfile  jetpack_main.py  requirements.txt
06-is-it-down-monitor/: Dockerfile  README.md  requirements.txt
06-py-permanent-job-gcp/: requirements-torch.txt  requirements.txt
06-py-s3-access/: Dockerfile
07-cartoonify/: Dockerfile  README.md  jetconfig.yaml  jetpack_io-0.5.1.dev202201201642726979-py3-none-any.whl  pyproject.toml
07-cartoonify/cartoonify/: main.py
07-cartoonify/tests/: test_cartoonify.py
07-py-async-jobs-buildpack/: error_job.py
07-py-cron-job/: Dockerfile
08-py-cron-job/: Dockerfile
08-py-scheduled-jobs/: Dockerfile  requirements.txt
nodejs-redis-cache-example/: .editorconfig  Dockerfile  package.json
python-email-sender/: .editorconfig  Dockerfile  README.md  main.py  (+4 more)
(+30 files in other folders)
