[tool.poetry]
name = "cartoonify"
version = "0.1.0"
description = ""
authors = ["Jetpack <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.8.9,<3.11"
numpy = "^1.21.4"
fastapi = "^0.70.1"
uvicorn = "^0.16.0"
opencv-python = "^4.5.4"
jetpack-io = "jetpack_io-0.5.1.dev202201201642726979-py3-none-any.whl"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
start = "cartoonify.main:start"
process = "cartoonify.main:process"
